--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "main": "index.js",
   "author": "Pavlos Vinieratos <pvinis@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
+  },
   "dependencies": {
     "execa": "^1.0.0",
     "ramda": "^0.26.1",
     "rxjs": "^6.4.0"
   },
   "devDependencies": {
-    "jest": "^24.7.1"
+    "@types/execa": "^0.9.0",
+    "@types/node": "^11.13.4",
+    "@types/ramda": "^0.26.6",
+    "jest": "^24.7.1",
+    "nodemon": "^1.18.11",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.3"
   }
 }
